test/runnable/test11447_2.d
// COMPILE_SEPARATELY
// EXTRA_SOURCES: imports/a11447_2.d
// PERMUTE_ARGS: -allinst

import imports.a11447_2;

void main() {
    A a;
    aaa(a);
}

